logs/runtime.log
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
  File "/home/ubuntu/crypto_analysis_bot/src/main.py", line 129
    filename = f"{self.data_dir}/social_data_{datetime.now
               ^
SyntaxError: unterminated string literal (detected at line 129)
